//
// This source file is part of the Stanford Spezi open-source project
//
// SPDX-FileCopyrightText: 2022 Stanford University and the project authors (see CONTRIBUTORS.md)
//
// SPDX-License-Identifier: MIT
//

// MARK: OpenAIAPIKeyOnboardingStep
"OPENAI_API_KEY_TITLE" = "OpenAI API Key";
"OPENAI_API_KEY_SUBTITLE" = "Please enter your OpenAI API key.";
"OPENAI_API_KEY_SUBTITLE_HINT" = "You can create and inspect your OpenAI API keys [in the API keys section of your OpenAI Account](https://platform.openai.com/account/api-keys).";
"OPENAI_API_KEY_PROMT" = "OpenAI API Key";
"OPENAI_API_KEY_SAVE_BUTTON" = "Next";


// MARK: OpenAIModelSelectionOnboardingStep
"OPENAI_MODEL_SELECTION_TITLE" = "Select an OpenAI Model";
"OPENAI_MODEL_SELECTION_SUBTITLE" = "Select the OpenAI model that you want to use. Ensure that your API key has proper access to the model you select.";
"OPENAI_MODEL_SELECTION_DESCRIPTION" = "OpenAI GPT Model";
"OPENAI_MODEL_SELECTION_SAVE_BUTTON" = "Next";


// MARK: Message Views
"MESSAGE_INPUT_TEXTFIELD" = "Message Input Textfield";
"MICROPHONE_BUTTON" = "Record Message";
"SEND_MESSAGE" = "Send Message";
