...
            credentialsConfig: .init(
                tag: self.credentials.tag,
                username: self.credentials.username
            ),
            title: .init("\(PlatformDefinition.platformName) API Key", bundle: .atURL(from: .module)),
            subtitle: .init("Please enter your \(PlatformDefinition.platformName) API key", bundle: .atURL(from: .module)),
            prompt: .init("API Key…", bundle: .atURL(from: .module)),
            hint: { () -> LocalizedStringResource? in
                guard let url = PlatformDefinition.platformDeveloperConsoleUrl else {
                    return nil
                }
                return LocalizedStringResource(
                    "You can create and inspect your \(PlatformDefinition.platformName) API keys [in the API keys section of the \(PlatformDefinition.platformName) Website](\(url.absoluteString)).",
...
    ///   - actionText: Localized text that should appear on the action button.
    ///   - action: Action that should be performed after the openAI API key has been persisted.
    public init(
        actionText: LocalizedStringResource? = nil,
        _ action: @escaping @MainActor () async throws -> Void
    ) {
        self.actionText = actionText ?? LocalizedStringResource("Continue", bundle: .module)
        self.action = action
    }
}


#if DEBUG
...
