...
//

import Foundation
import llama


/// Extension of ``LLMLocal`` handling the text tokenization.
extension LLMLocal {
    /// Converts the current context of the model to the individual `LLMLocalToken`'s based on the model's dictionary.
    /// This is a required tasks as LLMs internally processes tokens.
    ///
    /// - Returns: The tokenized `String` as `LLMLocalToken`'s.
    func tokenize() async throws -> [LLMLocalToken] {
...
